# resource-tracker

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/workflows/: R-CMD-check.yaml  lint.yaml  mkdocs.yaml  tests.yaml
CHANGELOG/: index.html
R/: .Rbuildignore  .lintr  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml
R/R/: ResorceTracker.R  ResourceTracker.R  zzz.R
R/man/: ResourceTracker.Rd  resource_tracker.Rd
R/tests/: testthat.R
R/tests/testthat/: test-r6.R
docs/: streaming.md
docs/integrations/: index.md  metaflow.md  standalone.md
examples/: README.md  basic_tracking.py  benchmark.py  standalone.py
examples/metaflow/: 1-minimal-failed.py  1-minimal.R  1-minimal.py  1-single-step.py  2-gpu.py  2-multi-cpu.py  3-gbm.py
integrations/: index.html
integrations/metaflow/: index.html
integrations/r/: index.html
integrations/standalone/: index.html
reference/resource_tracker/: index.html
reference/resource_tracker/cloud_info/: index.html
reference/resource_tracker/column_maps/: index.html
reference/resource_tracker/dummy_workloads/: index.html
reference/resource_tracker/helpers/: index.html
reference/resource_tracker/keeper/: index.html
reference/resource_tracker/nvidia/: index.html
reference/resource_tracker/report/: index.html
reference/resource_tracker/s3_upload/: index.html
reference/resource_tracker/sentinel_api/: index.html
reference/resource_tracker/server_info/: index.html
reference/resource_tracker/streaming/: index.html
reference/resource_tracker/tiny_bars/: index.html
reference/resource_tracker/tiny_data_frame/: index.html
reference/resource_tracker/tracker/: index.html
reference/resource_tracker/tracker_procfs/: index.html
reference/resource_tracker/tracker_psutil/: index.html
search/: search_index.json
src/metaflow_extensions/resource_tracker/plugins/: mfextinit_resource_tracker.py  resource_tracker  track_resources.py
src/metaflow_extensions/resource_tracker/plugins/track_resources/: resource_tracker  (+1 more)
src/metaflow_resource_tracker/: __init__.py  tracker.py
src/resource_tracker/: __init__.py  cloud_info.py  column_maps.py  dummy_workloads.py  helpers.py  keeper.py  metaflow.py  nvidia.py  report.py  s3_upload.py  sentinel_api.py  server_info.py  streaming.py  tiny_bars.py  tiny_data_frame.py  tracker.py  tracker_procfs.py  tracker_psutil.py
src/resource_tracker/report_template/: report.html
streaming/: index.html
tests/: conftest.py  test_keeper.py  test_metaflow.py  test_metaflow_helpers.py  test_report.py  test_s3_upload.py  test_sentinel_api.py  test_server_info.py  test_streaming.py  test_tiny_bars.py  test_tiny_dataframe.py  test_tracker.py  test_tracker_streaming.py
(+10 files in other folders)
