[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-tracker"
version = "0.1.0"
description = "Resource usage tracker and cloud server comparison/suggestion tool."
readme = "README.md"
authors = [
    {name = "Gergely Daroczi", email = "daroczig@sparecores.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
metaflow = ["metaflow"]
all = ["resource-tracker[metaflow]"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["resource_tracker"]
