[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-tracker"
version = "0.1.0"
description = "Resource usage tracker and cloud server comparison/suggestion tool."
readme = "README.md"
authors = [
    {name = "Gergely Daroczi", email = "daroczig@sparecores.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = ["pytest"]
metaflow = ["metaflow"]
mkdocs = [
  "markdown",
  "mkdocs",
  "mkdocs-material[imaging]==9.5.13", "mkdocs-material-extensions",
  "mkdocs-autorefs", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-section-index",
  "mkdocstrings[python]>=0.18",
  "mkdocs-api-autonav",
]
# disabled the "all" flag due to not working with metaflow extension system
# https://outerbounds-community.slack.com/archives/C020U025QJK/p1740659880844659?thread_ts=1740603078.574349&cid=C020U025QJK
# TODO reenable when fix/workaround is available
#all = ["resource-tracker[metaflow]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "resource_tracker",
    "metaflow_extensions.*",
]
